--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "chess",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "build": "tsc -p .",
-    "dev": ""
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@swc/core": "^1.2.131",
-    "@swc/jest": "^0.2.17",
-    "jest": "^27.4.7"
-  }
+	"name": "chess",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest",
+		"build": "tsc -p .",
+		"dev": "nodemon ./dist/index.js",
+		"watch": "tsc --watch -p ."
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@swc/core": "^1.2.131",
+		"@swc/jest": "^0.2.17",
+		"jest": "^27.4.7"
+	}
 }
