--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
 	"scripts": {
 		"test": "jest",
 		"build": "tsc -p .",
-		"dev": "nodemon ./dist/index.js",
-		"watch": "tsc --watch -p ."
+		"watch": "tsc --watch -p .",
+		"clean": "rm -rf ./dist"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"@swc/core": "^1.2.131",
 		"@swc/jest": "^0.2.17",
-		"jest": "^27.4.7"
+		"@types/jest": "^27.4.0",
+		"jest": "^27.4.7",
+		"ts-loader": "^9.2.6",
+		"typescript": "^4.5.4",
+		"webpack-cli": "^4.9.1"
 	}
 }
